contoso-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-webserver
  namespace: default
spec:
  selector:
    app: contoso-webserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
