contoso-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-webserver
  namespace: default
spec:
  ingressClassName: PLACEHOLDER
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contoso-webserver
                port:
                  number: 80
